correccion del buscador en el dashboard

--- a/Private/admin-categories.html
+++ b/Private/admin-categories.html
@@ -1,6 +1,6 @@
 <div class="panel-header">
   <div class="panel-actions">
-    <input type="search" placeholder="Buscar por nombre..." class="panel-search" aria-label="Buscar categorías">
+    <input type="search" placeholder="Buscar por ID o nombre..." class="panel-search" aria-label="Buscar categorías">
     <button class="btn-add-new"><i class="fa-solid fa-plus"></i> Añadir Categoría</button>
     <button type="button" class="btn-upload-excel" onclick="document.getElementById('excelCategorias').click()">
       <i class="fa-solid fa-file-excel"></i> Cargar desde Excel
