--- a/Private/admin-products.html
+++ b/Private/admin-products.html
@@ -1,6 +1,6 @@
 <div class="panel-header">
   <div class="panel-actions">
-    <input type="search" placeholder="Buscar por nombre o SKU..." class="panel-search" aria-label="Buscar productos">
+    <input type="search" placeholder="Buscar por ID o nombre..." class="panel-search" aria-label="Buscar productos">
     <button class="btn-add-new"><i class="fa-solid fa-plus"></i> Añadir Producto</button>
     <button type="button" class="btn-upload-excel" onclick="document.getElementById('excelProductos').click()">
       <i class="fa-solid fa-file-excel"></i> Cargar desde Excel
