--- a/Private/admin-suppliers.html
+++ b/Private/admin-suppliers.html
@@ -1,7 +1,7 @@
 
 <div class="panel-header">
   <div class="panel-actions">
-    <input type="search" placeholder="Buscar por nombre..." class="panel-search" aria-label="Buscar proveedores">
+    <input type="search" placeholder="Buscar por ID, nombre o correo..." class="panel-search" aria-label="Buscar proveedores">
     <button class="btn-add-new"><i class="fa-solid fa-plus"></i> Añadir Proveedor</button>
     <button type="button" class="btn-upload-excel" onclick="document.getElementById('excelProveedores').click()">
       <i class="fa-solid fa-file-excel"></i> Cargar desde Excel
