--- a/Private/admin-users.html
+++ b/Private/admin-users.html
@@ -1,6 +1,6 @@
 <div class="panel-header">
   <div class="panel-actions">
-    <input type="search" placeholder="Buscar por nombre o correo..." class="panel-search" aria-label="Buscar usuarios">
+    <input type="search" placeholder="Buscar por ID, nombre o correo..." class="panel-search" aria-label="Buscar usuarios">
     <button class="btn-add-new"><i class="fa-solid fa-plus"></i> Añadir Usuario</button>
   </div>
 </div>
