Manejo de Cotizaciones

--- a/Private/client-quotes.html
+++ b/Private/client-quotes.html
@@ -5,6 +5,7 @@
         <th>ID Cotización</th>
         <th>Fecha</th>
         <th>Estado</th>
+        <th>Total</th>
       </tr>
     </thead>
     <tbody id="quotesTableBody"></tbody>
