diseño de editar cotizacion

--- a/Private/admin-quotes.html
+++ b/Private/admin-quotes.html
@@ -48,8 +48,8 @@
       </div>
 
       <div class="modal-actions">
-        <button id="btn-save-cot" class="btn-submit">Guardar precios</button>
-        <button id="btn-mark-returned" class="btn-submit btn-success">Marcar como Devuelta</button>
+        <button id="btn-mark-returned" class="btn-confirm btn-success">Marcar como Devuelta</button>
+        <button id="btn-save-cot" class="btn-confirm">Guardar precios</button>
       </div>
     </div>
   </div>
