--- a/Private/admin-quotes.html
+++ b/Private/admin-quotes.html
@@ -48,7 +48,7 @@
       </div>
 
       <div class="modal-actions">
-        <button id="btn-mark-returned" class="btn-confirm btn-success">Marcar como Devuelta</button>
+        <button id="btn-mark-returned" class="btn-confirm btn-success" style="display: none;">Marcar como Devuelta</button>
         <button id="btn-save-cot" class="btn-confirm">Guardar precios</button>
       </div>
     </div>
