Barra de busqueda

--- a/Private/client-quotes.html
+++ b/Private/client-quotes.html
@@ -1,3 +1,8 @@
+<div class="panel-header">
+  <div class="panel-actions">
+    <input type="search" placeholder="Buscar por ID..." class="panel-search" aria-label="Buscar cotizaciones">
+  </div>
+</div>
 <div class="panel-content">
   <table id="quotesTable" class="admin-table">
     <thead>
