--- a/Private/dashboard.html
+++ b/Private/dashboard.html
@@ -6,6 +6,10 @@
   <title>Dashboard - Mount</title>
   <script src="/Font/dashboard.js" defer></script>
   <link rel="stylesheet" href="/Font/dashboard.css" />
+  <!-- Librerías para generar PDF -->
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf-autotable/3.8.2/jspdf.plugin.autotable.min.js"></script>
+
   <link rel="stylesheet" href="/Font/index.css" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" />
   <link rel="icon" type="image/png" href="/Font/imgs/mount logo.png">
